--- a/rules.html
+++ b/rules.html
@@ -373,14 +373,15 @@
 
         <a href="index.html" class="back-btn">Back to Home</a>
 
-        <div class="nav-buttons">
-            <a href="index.html" class="nav-btn">Home</a>
-            <a href="about.html" class="nav-btn">About Us</a>
-            <a href="contact.html" class="nav-btn">Contact</a>
-            <a href="rules.html" class="nav-btn">Rules</a>
-            <a href="shop.html" class="nav-btn">Shop</a>
-            <a href="serverStatus.html" class="nav-btn">Server Status</a>
-        </div>
+    <!-- Navigation Menu -->
+    <nav class="absolute top-0 left-0 right-0 p-4 flex justify-center gap-6 z-10 opacity-0">
+        <a href="index.html" class="text-cyan-500 hover:text-cyan-600">Home</a>
+        <a href="about.html" class="text-cyan-500 hover:text-cyan-600">About Us</a>
+        <a href="contact.html" class="text-cyan-500 hover:text-cyan-600">Contact</a>
+        <a href="rules.html" class="text-cyan-500 hover:text-cyan-600">Rules</a>
+        <a href="shop.html" class="text-cyan-500 hover:text-cyan-600">Shop</a>
+        <a href="serverStatus.html" class="text-cyan-500 hover:text-cyan-600">Server Status</a>
+    </nav>
     </main>
 
     <script>
