--- a/shop.html
+++ b/shop.html
@@ -354,11 +354,15 @@
         <a href="index.html" class="back-btn">Back to Home</a>
 
         <!-- Added buttons for other pages -->
-        <a href="about.html" class="navbar-btn">About Us</a>
-        <a href="contact.html" class="navbar-btn">Contact</a>
-        <a href="rules.html" class="navbar-btn">Server Rules</a>
-        <a href="shop.html" class="navbar-btn">Shop</a>
-        <a href="serverStatus.html" class="navbar-btn">Server Status</a>
+    <!-- Navigation Menu -->
+    <nav class="absolute top-0 left-0 right-0 p-4 flex justify-center gap-6 z-10 opacity-0">
+        <a href="index.html" class="text-cyan-500 hover:text-cyan-600">Home</a>
+        <a href="about.html" class="text-cyan-500 hover:text-cyan-600">About Us</a>
+        <a href="contact.html" class="text-cyan-500 hover:text-cyan-600">Contact</a>
+        <a href="rules.html" class="text-cyan-500 hover:text-cyan-600">Rules</a>
+        <a href="shop.html" class="text-cyan-500 hover:text-cyan-600">Shop</a>
+        <a href="serverStatus.html" class="text-cyan-500 hover:text-cyan-600">Server Status</a>
+    </nav>
     </main>
 
     <script>
